@@ -8,6 +8,10 @@ all:
 	for dir in $(LIB); do (cd $$dir && $(MAKE)); done
 	for dir in $(MODULES); do (cd $$dir && $(MAKE)); done
 
+.PHONY: run
+run:
+	(cd menu && ./menu)
+
 .PHONY: clean
 clean:
 	rm -f *~
