@@ -5,3 +5,4 @@
 /texture.o
 /objects.o
 /input.o
+/object_fab.o
